test/samples/invalid/resolving/never_global.maruir
var b: never = 0_u256

fun foo(a: u256) { }
